--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,14 +1,15 @@
 button:
   about: About
   back: Back
+  github: Github Link
   go: GO
   home: Home
   toggle_dark: Toggle dark mode
   toggle_langs: Change languages
 intro:
+  aka: Also known as
   desc: Opinionated Vite Starter Template
   dynamic-route: Demo of dynamic route
   hi: Hi, {name}!
-  aka: Also known as
   whats-your-name: What's your name?
 not-found: Not found
